[package]
name = "cci"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
utils = { path = "../utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
log = "0.4"
